[package]
name = "airlock-rs"
version = "0.3.0"
edition = "2021"
description = "Local-first AI security gateway: PII redaction, token compression, and audit ledger"
repository = "https://github.com/OxideOps/airlock"
authors = ["Dillon Roller"]
readme = "README.md"
license = "Apache-2.0"

[lib]
name = "airlock"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "airlock"
path = "src/main.rs"

[features]
python = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
clap          = { version = "4",    features = ["derive"] }
serde         = { version = "1",    features = ["derive"] }
serde_json    = "1"
regex         = "1"
rand          = "0.8"
rand_chacha   = "0.3"
sha2          = "0.10"
rayon         = "1"
rusqlite      = { version = "0.31", features = ["bundled"] }
chrono        = "0.4"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow        = "1"
toml          = "0.8"
pyo3          = { version = "0.22", optional = true }
luhn = "1.0.1"

# ── Release profile ───────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
# panic = "abort" omitted — pyo3 requires unwinding to propagate Python exceptions
