[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "airlock-rs"
version = "0.3.0"
description = "Local-first AI security gateway: PII redaction, token compression, and audit ledger"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Dillon Roller" }]
keywords = ["pii", "privacy", "llm", "ai", "security", "gdpr", "hipaa"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.maturin]
features = ["python"]
bindings = "pyo3"
